migdb.qvto/transforms/tests/validator_postgresql/test_err_invalid_01_required.qvto
import builder_errors;

modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";
transformation test_err_invalid_01_required(out outModel : ERR);


main() {
	var error : Error := _validationError("Schema \"collision_schema\" has duplicit name as "+
		"another schema in generation", "validator_postgresql.qvto"); 
	_errorLog(OrderedSet{error});	 
}